--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.snt</groupId>
-    <artifactId>inmemantlr-1.0</artifactId>
+    <artifactId>inmemantlr</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <build>
         <plugins>
             <plugin>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>org.eclipse.jdt.core.compiler</groupId>
             <artifactId>ecj</artifactId>
-            <version>3.5.1</version>
+            <version>4.5.1</version>
         </dependency>
     </dependencies>
 
