--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
                 <target>${java.version}</target>
             </configuration>
         </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <threadCount>1</threadCount>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -32,6 +40,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.antlr</groupId>
