--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@
 
 language: java
 
+sudo: required
+
+dist: trusty
+
 jdk:
     - oraclejdk8
 
@@ -32,4 +36,4 @@ cache:
     - .spark-dist
 
 install:
-  - mvn -v
+  - mvn package
