--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@
 #
 
 language: java
+
 sudo : false
 
 jdk:
@@ -28,3 +29,6 @@ jdk:
 
 install:
   - mvn clean package
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
