--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.julianthome</groupId>
     <artifactId>inmemantlr</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -20,8 +20,8 @@
 
     <licenses>
         <license>
-            <name>EUPL, Version 1.1</name>
-            <url>https://joinup.ec.europa.eu/sites/default/files/eupl1.1.-licence-en_0.pdf</url>
+        <name>MIT License</name>
+        <url>http://www.opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
 
