--- a/pom.xml
+++ b/pom.xml
@@ -162,8 +162,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>org.snt.inmemantlr
-                                            .Inmemantlr</Main-Class>
+                                        <Main-Class>org.snt.inmemantlr.Inmemantlr</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
