--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/test/resources/grammars-v4"]
 	path = src/test/resources/grammars-v4
 	url = https://github.com/antlr/grammars-v4
+[submodule "inmemantlr-api/src/test/resources/grammars-v4"]
+	path = inmemantlr-api/src/test/resources/grammars-v4
+	url = https://github.com/antlr/grammars-v4.git
