--- a/inmemantlr-tool/pom.xml
+++ b/inmemantlr-tool/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>com.github.julianthome</groupId>
     <artifactId>inmemantlr-tool</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <build>
         <plugins>
@@ -62,7 +62,11 @@
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.julianthome</groupId>
+            <artifactId>inmemantlr</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
-
 
 </project>
