--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <!-- the inmemantlr standalone tool -->
-        <module>inmemantlr-tool</module>
         <!-- the inmemantlr.jar which is uploaded to maven central -->
         <module>inmemantlr-api</module>
+        <!-- the inmemantlr standalone tool -->
+        <module>inmemantlr-tool</module>
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -25,6 +25,8 @@
         <java.version>1.8</java.version>
         <java.version.source>1.8</java.version.source>
         <java.version.target>1.8</java.version.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <licenses>
