--- a/inmemantlr-api/pom.xml
+++ b/inmemantlr-api/pom.xml
@@ -40,9 +40,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
+
                 <configuration>
                     <!-- Travis build workaround -->
-                    <argLine>-Xms1024m -Xmx2048m</argLine>
+                    <argLine>${argLine} -Xms1024m -Xmx2048m</argLine>
                 </configuration>
             </plugin>
             <plugin>
