--- a/inmemantlr-graal/pom.xml
+++ b/inmemantlr-graal/pom.xml
@@ -11,12 +11,16 @@
 
     <artifactId>inmemantlr-graal</artifactId>
 
-
     <dependencies>
         <dependency>
             <groupId>com.github.julianthome</groupId>
             <artifactId>inmemantlr-api</artifactId>
             <version>1.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 
