--- a/inmemantlr-tool/pom.xml
+++ b/inmemantlr-tool/pom.xml
@@ -57,7 +57,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>
-                                            Inmemantlr
+                                            org.snt.inmemantlr.tool.Inmemantlr
                                         </Main-Class>
                                     </manifestEntries>
                                 </transformer>
