--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.julianthome</groupId>
     <artifactId>inmemantlr</artifactId>
-    <version>1.3.4</version>
+    <version>1.3.5</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -14,7 +14,7 @@
         <module>inmemantlr-api</module>
         <!-- the inmemantlr standalone tool -->
         <module>inmemantlr-tool</module>
-        <module>inmemantlr-graal</module>
+        <!--<module>inmemantlr-graal</module>i-->
     </modules>
 
     <name>${project.groupId}:${project.artifactId}</name>
