--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ jdk:
 install:
   - git submodule init
   - git submodule update
-  - mvn clean package
+
+script: mvn clean package
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
