--- a/inmemantlr-api/pom.xml
+++ b/inmemantlr-api/pom.xml
@@ -82,6 +82,13 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            org/antlr/v4/unicode/UnicodeData*
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
