--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <ecj.version>4.6.1</ecj.version>
         <commonsio.version>2.5</commonsio.version>
         <commonscli.version>1.4</commonscli.version>
+        <commonstext.version>1.1</commonstext.version>
     </properties>
 
     <licenses>
@@ -159,6 +160,11 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${commonscli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commonstext.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
