--- a/inmemantlr-api/pom.xml
+++ b/inmemantlr-api/pom.xml
@@ -33,6 +33,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
