--- a/inmemantlr-tool/pom.xml
+++ b/inmemantlr-tool/pom.xml
@@ -75,9 +75,18 @@
             <artifactId>commons-cli</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.julianthome</groupId>
             <artifactId>inmemantlr-api</artifactId>
             <version>1.3.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.julianthome</groupId>
+            <artifactId>inmemantlr-api</artifactId>
+            <version>1.3.9</version>
         </dependency>
     </dependencies>
 
