--- a/inmemantlr-api/pom.xml
+++ b/inmemantlr-api/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.github.julianthome</groupId>
         <artifactId>inmemantlr</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.4</version>
+        <version>1.4.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
