--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: java
 
 sudo : false
 
-jdk:
-  - oraclejdk10
+addons:
+  apt:
+    packages:
+      - oracle-java10-installer
 
 install:
   - git submodule init
