--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>9</java.version>
         <gpgplugin.version>1.6</gpgplugin.version>
-        <javadocplugin.version>2.10.4</javadocplugin.version>
+        <javadocplugin.version>3.0.1</javadocplugin.version>
         <slf4j.version>1.7.25</slf4j.version>
         <junit.version>5.2.0</junit.version>
         <antlr.version>4.7.1</antlr.version>
         <commonsio.version>2.6</commonsio.version>
         <commonscli.version>1.4</commonscli.version>
         <commonstext.version>1.3</commonstext.version>
+        <surefire.version>2.21.0</surefire.version>
     </properties>
 
     <licenses>
@@ -89,9 +90,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${javadocplugin.version}</version>
-                <configuration>
-                    <additionalparam>-html5</additionalparam>
-                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -100,6 +98,12 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <detectJavaApiLink>true</detectJavaApiLink>
+                    <detectLinks>true</detectLinks>
+                    <detectOfflineLinks>false</detectOfflineLinks>
+                    <quiet>true</quiet>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -107,6 +111,14 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>-Xmx2048m</argLine>
                 </configuration>
             </plugin>
         </plugins>
