--- a/inmemantlr-tool/pom.xml
+++ b/inmemantlr-tool/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.github.julianthome</groupId>
         <artifactId>inmemantlr</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>1.9.0</version>
+        <version>1.9.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>com.github.julianthome</groupId>
             <artifactId>inmemantlr-api</artifactId>
-            <version>1.7.0</version>
+<!--            <version>1.7.0</version>-->
         </dependency>
 
     </dependencies>
