--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,10 @@
 
     <developers>
         <developer>
-            <name>Julian Thomé</name>
+            <name>Julian Thome</name>
             <email>julian.thome.de@gmail.com</email>
-            <organization>Uni Luxembourg</organization>
-            <organizationUrl>http://wwwen.uni.lu</organizationUrl>
+            <organization></organization>
+            <organizationUrl></organizationUrl>
         </developer>
     </developers>
 
